remove numeracy exam, add tutorial page, cleanup dead links

--- a/2023/_posts/2017-01-24-readings.md
+++ b/2023/_posts/2017-01-24-readings.md
@@ -6,10 +6,6 @@ categories: posts
 permalink: /2023/readings
 ---
 
-## Recitation Notes
-Materials relevant to recitations will be posted here as the course progresses.
-
-
 ## In-Class Readings
 There is so much fascinating biology to explore --- far more than we could ever cover in a single quarter of an introductory course. Instead, we will often point you to excellent readings that serve as opportunities to continue your adventure your own way. We will list them here as the course progresses.
 
@@ -18,7 +14,7 @@ Interacting with these readings is optional, but all of them are relevant to cla
 {% assign readings = site.data.2023.papers %}
 
 {% for week in readings %}
-<span style="display: block; font-weight: 500"> <b>{{ week[0] }}</b></span>
+### {{ week[0] }}
 
 {% for p in week[1] %}
 {% assign dir = "http://rpdata.caltech.edu/courses/bi1_2023/protected/" %}
