--- a/2023/_posts/2017-01-25-code.md
+++ b/2023/_posts/2017-01-25-code.md
@@ -1,37 +1,50 @@
 ---
 layout: 2023_post
-title: Programming
+title: Tutorials
 cover: code.jpg
 categories: posts
-permalink: /2023/programming
+permalink: /2023/tutorials
 ---
 
-Many homework problems in this course will require you to write computer programs to solve them. No prior programming experience is needed for this course and all materials necessary to learn the required skills will be available through the course.
+## FAQs
 
-## Tutorials
-We will have several computational tutorials throughout the term. As the course progresses, these materials will be posted below.
+#### What are tutorials?
+Tutorials are weekly sessions hosted by the head GTAs. They are designed to supplement the rest of the course (lectures, recitations, and office hours), largely by introducing key computational skills relevant to each week's content.
 
-* [Tutorial 0a: Configuring your computer]({{ site.baseurl }}/code/t0a_setting_up_python.html) \| This tutorial will walk you through how to install a Python 3.6 scientific computing environment.
+#### Why is there programming in an introductory biology course?
+Computational skills are increasingly important in modern bioscience. Thus, many homework problems will ask you to write code to perform calculations, simulations, and analyses. In turn, this allows us to get you working with real experimental data, which is typically a benefit only afforded to students in labs or higher level courses.
 
-* [Tutorial 0b: Using the Jupyter notebook]({{ site.baseurl }}/code/t0b_jupyter_notebooks.html) \| This tutorial will teach you how to write code and text in Jupyter notebooks for homework submissions.
+#### Do I need prior programming experience?
+No! In fact, you will probably find tutorials more useful the less you already know. There is no CS prerequisite for this course; therefore, tutorials cover everything you need to know to succeed on the programming assignments. The goal is to introduce you to the fundamentals in a relaxed, low-pressure environment.
 
-* [Tutorial 0c: A Primer on Python Syntax]({{ site.baseurl }}/code/t0c_python_syntax_and_plotting.html) \| This tutorial will walk you through the basics of programming in Python.
+#### What if I already feel comfortable programming?
+If you already feel prepared to tackle the programming questions, feel free to only attend the tutorials you want/need.
 
-* [Tutorial 1: Basic DNA Sequence Analysis]({{ site.baseurl }}/code/t01_sequence_analysis.html) \| This tutorial will introduce you to reading and analyzing DNA sequences from a file. [[data set]](http://rpdata.caltech.edu/courses/bi1_2017/data/mabuya_atlantica.zip)
+#### What programming language(s) can I use?
+For a combination of pedagogical and logistical reasons, all of the programming in this course is done in Python. It is also the only language we accept for homework submissions.
 
-* [Tutorial 2: Numerical Integration]({{ site.baseurl }}/code/t02_numerical_integration.html) \| Here, you will learn how to write your own Forward-Euler numerical integrator to  investigate radioactive decay.
+#### Will tutorials always be about programming?
+Some parts of the course call for less programming than others. At these times, tutorials may instead be host to live demos and experiments that build off of themes from class. These sessions will be announced beforehand in lecture so that you don't miss them.
 
-* [Tutorial 3: Stochastic Simulations]({{ site.baseurl }}/code/t03_stochastic_simulations.html) \| Here, we summarize how to write stochastic simulations and examine one-dimensional diffusion and genetic drift.
+#### Will tutorials be recorded?
+Tutorials are best attended live, but we will also upload recordings and any accompanying code notebooks below as the course progresses.
 
-* [Tutorial 4: Quantitative Image Processing]({{ site.baseurl }}/code/t04_quantitative_image_processing.html) \| In this tutorial, you will learn some principles of computational image processing and more details about how we experimentally test our predictions regarding the fold-change in gene expression. [\[data set\]](http://rpdata.caltech.edu/courses/bi1_2017/data/ecoli_images.zip)
+## Tutorial Schedule
 
-* [Tutorial 5: Nonlinear Regression]({{ site.baseurl }}/code/t05_nonlinear_regression.html) \| One of the most useful skills any scientist can possess is a strong knowledge of statistics. Here, we will stick our toes in these waters by learning how to perform a nonlinear regression on a single parameter. [\[data set\]](http://rpdata.caltech.edu/courses/bi1_2017/data/ross_fanelli_1958.csv)
+| Week | Topic | Links |
+| :--: | -- | -- |
+| 1 | Intro to Python and image segmentation. | |
+| 2 | Computational sequence analysis. | |
+| 3 | Dating fossils using radioactive decay. | |
+| 4 | Exploring evolution with stochastic simulations. | |
+| 5 | Live experiment, part 1. _To be determined._ | |
+| 6 | Live experiment, part 2. _To be determined._ | |
+| 7 | Making microscopy quantitative. | |
+| 8 | _To be determined._ | |
+| 9 | _To be determined._ | |
 
-* [Tutorial 6: Integrating Master Equations]({{ site.baseurl }}/code/t06_chemical_master_equation.html) \| We advance our skills of performing numerical integration from tutorial two to consider the diffusion of particles over time and track their spatial distributions.
+## External Resources
 
-* [Tutorial 7: Image Processing with Mouse Clicks]({{ site.baseurl }}/code/t07_clicking_image_analysis.html) \| Sometimes, writing code to do automated image analysis can be burdensome or impossible. In this tutorial shows you how you can use your mouse to mark positions of the cephalic furrow on images of *Drosophila* embryos. [\[data set\]](http://rpdata.caltech.edu/courses/bi1_2017/data/embryo_furrow.tif)
-
-## External resources
 Below is a list of useful online resources for learning the Python programming language and principles of programming in general.
 
 * [The Missing Semester of Your CS Education](https://missing.csail.mit.edu/), MIT
