--- a/2023/_posts/2017-01-28-people.md
+++ b/2023/_posts/2017-01-28-people.md
@@ -6,7 +6,7 @@ categories: posts
 permalink: /2023/people
 ---
 
-All emails are given as `name@caltech.edu` unless otherwise specified. 
+All emails are given as `<name>@caltech.edu` unless otherwise specified. 
 
 
 ## Instructor
