--- a/2023/_posts/2017-01-30-schedule.md
+++ b/2023/_posts/2017-01-30-schedule.md
@@ -10,41 +10,25 @@ permalink: /2023/schedule
 
 | Week | Date | Topic | Homework |
 | -- | -- | -- | -- |
-| 1 | Tuesday, April 4 | Wondering about the wonders of the living world. A feeling for the organism. Order-of-magnitude thinking in biology. | |
-| 1 | Thursday, April 6 | Where the animals go. How do we know what we know? Fear and death on the Serengeti --- the great migrations. | [Homework 1 Released]() |
-| 2 | Tuesday, April 11 | Where the animals go, part 2. The bar-tailed godwit and its 10,000 km nonstop journey. Humpback whales, from Alaska to Maui. | |
-| 2 | Thursday, April 13 | Keystone species and trophic cascades. Robert Paine’s wonderful seastar experiment on a tiny patch of reef in the Pacific Northwest. Otters and the Aleutians. | [Homework 2 Released](), Homework 1 Due |
-| 3 | Tuesday, April 18 | The species question. The distribution of species in space and time. Island biogeography and the puzzle of amphibians on oceanic islands. | |
-| 3 | Thursday, April 20 | The whale. On the imperfections of the fossil record. On the perfections of the fossil record. | [Homework 3 Released](), Homework 2 Due |
-| 4 | Tuesday, April 25 | The whale, part 2. DNA as a document of evolutionary history. The hidden story of whale evolution in DNA.  | |
-| 4 | Thursday, April 27 | The ingredients of evolution. Heritable variation. The forces of evolution such as selection and drift. | [Homework 4 Released](), Homework 3 Due |
-| 5 | Tuesday, May 2 | The evolution of eye color. A population genetic view of eye color evolution, and the surprising reach of the coin flip idea. | |
-| 5 | Thursday, May 4 | What is life? Musings on the secret of life. Life and its entropic destiny. | [Homework 5 Released](), Homework 4 Due |
-| 6 | Tuesday, May 9 | Eating the sun. How living organisms make a living. Biological batteries, with a special emphasis on the proton motive force. | |
-| 6 | Thursday, May 11 | Turning sugar into a cell. Big data and the proteome. The proteome by pure thought. A first look at gene regulation. | [Homework 6 Released](), Homework 5 Due |
-| 7 | Tuesday, May 16 | An interlude on probability as the language of reason, and the language of biology. Boltzmann, statistical mechanics, and binding. Gene regulation continued. | |
-| 7 | Thursday, May 18 | Blood. The complete blood count test. The many cell types of the blood. Becoming a blood cell. | [Homework 7 Released](), Homework 6 Due |
-| 8 | Tuesday, May 23 | Blood, part 2. Myoglobin, hemoglobin — great molecular celebrities of modern science. | |
-| 8 | Thursday, May 25 | The crazy world of single-celled eukaryotes. From toxoplasma to _Chlamydomonas_. A most beautiful experiment! Size control in biology, with special reference to the flagellum. | [Homework 8 Released](), Homework 7 Due |
-| 9 | Tuesday, May 30 | Locomotion of snakes, worms, and lizards. Taming the gait. Geometric phases. | |
-| 9 | Thursday, June 1 | The cow. Global biodiversity. Land use. How cows work. | [Homework 9 Released](), Homework 8 Due |
-| 10 | Tuesday, June 6 | Human impacts. What are the facts? Why are the facts? | |
+| 1 | Tuesday, April 4 | Where the animals go. How do we know what we know? Fear and death on the Serengeti --- the great migrations. | |
+| 1 | Thursday, April 6 | Where the animals go, part 2. The bar-tailed godwit and its 10,000 km nonstop journey. Humpback whales, from Alaska to Maui. | Homework 1 Released |
+| 2 | Tuesday, April 11 | Keystone species and trophic cascades. Robert Paine’s wonderful seastar experiment on a tiny patch of reef in the Pacific Northwest. Otters and the Aleutians. | |
+| 2 | Thursday, April 13 | The species question. The distribution of species in space and time. Island biogeography and the puzzle of amphibians on oceanic islands. | Homework 2 Released, Homework 1 Due |
+| 3 | Tuesday, April 18 | The whale. On the imperfections of the fossil record. On the perfections of the fossil record. | |
+| 3 | Thursday, April 20 | The whale, part 2. DNA as a document of evolutionary history. The hidden story of whale evolution in DNA. | Homework 3 Released, Homework 2 Due |
+| 4 | Tuesday, April 25 | The ingredients of evolution. Heritable variation. The forces of evolution such as selection and drift. | |
+| 4 | Thursday, April 27 | The evolution of eye color. A population genetic view of eye color evolution, and the surprising reach of the coin flip idea. | Homework 4 Released, Homework 3 Due |
+| 5 | Tuesday, May 2 | What is life? Musings on the secret of life. Life and its entropic destiny. | |
+| 5 | Thursday, May 4 | Eating the sun. How living organisms make a living. Biological batteries, with a special emphasis on the proton motive force. | Homework 5 Released, Homework 4 Due |
+| 6 | Tuesday, May 9 | Turning sugar into a cell. Big data and the proteome. The proteome by pure thought. A first look at gene regulation. | |
+| 6 | Thursday, May 11 | An interlude on probability as the language of reason, and the language of biology. Boltzmann, statistical mechanics, and binding. Gene regulation continued. | Homework 6 Released, Homework 5 Due |
+| 7 | Tuesday, May 16 | Blood. The complete blood count test. The many cell types of the blood. Becoming a blood cell. | |
+| 7 | Thursday, May 18 | Blood, part 2. Myoglobin, hemoglobin — great molecular celebrities of modern science. | Homework 7 Released, Homework 6 Due |
+| 8 | Tuesday, May 23 | The crazy world of single-celled eukaryotes. From toxoplasma to _Chlamydomonas_. A most beautiful experiment! Size control in biology, with special reference to the flagellum. | |
+| 8 | Thursday, May 25 | Locomotion of snakes, worms, and lizards. Taming the gait. Geometric phases. | Homework 8 Released, Homework 7 Due |
+| 9 | Tuesday, May 30 | The cow. Global biodiversity. Land use. How cows work. | |
+| 9 | Thursday, June 1 | Human impacts. What are the facts? Why are the facts? | Homework 9 Released, Homework 8 Due |
+| 10 | Tuesday, June 6 | _To be determined._ | |
 | 10 | Thursday, June 8 | Summary of our adventure. The place of life in the universe. The place of biology in science. The place of curiosity and joy in our lives. |  Homework 9 Due |
 | 11 | Tuesday, June 13 | No Class | |
 | 11 | Thursday, June 15 | No Class | |
-
-## Recitation Schedule
-
-| Week | Topic |
-| :--: | -- |
-| 1 | Introduction to Python for basic image analysis (prep for wildebeest pset). **needs work** |
-| 2 | Introduction to Python for basic sequence analysis (prep for cholera/sao tome pset). **needs work** |
-| 3 | How to date fossils using radioactive decay. The molecular clock as revealed by sequence evolution (prep for deep time pset). **needs work** |
-| 4 | Stochastic simulations to explore the competing forces of evolution such as genetic drift, selection and mutation (prep for popgen pset). **needs work** |
-| 5 | tbd -- stat mech for sugar transport? **needs work** |
-| 6 | tbd -- stat mech for simple repression? **needs work** |
-| 7 | How to quantitatively analyze microscopy images (prep for bacterial segmentation pset). **needs work** |
-| 8 | tbd **needs work** |
-| 9 | tbd **needs work** |
-
-<!-- Estimates concerning the processes of the central dogma (e.g., ribosome content, translation speed). Solving the differential equations of population dynamics.  -->
