--- a/2023/_posts/2017-01-31-overview.md
+++ b/2023/_posts/2017-01-31-overview.md
@@ -11,7 +11,7 @@ permalink: /2023/index
 Biological processes take place at length scales ranging from that of individual protein molecules all the way to the algal blooms or rainforests that can be seen from space, and over a dizzying nearly 30 orders of magnitude in time scales. This course will start by examining the biology of processes such as how plants and animals colonize oceanic islands, and the physics of how animals such as wildebeest form giant herds during their year-long migration. With these wonders of the living world revealed, we will then seek to understand biological phenomena by thinking about genes and cells.
 
 ## Where and When?
-Each week will consist of two lectures, one recitation, and one computational tutorial. Office hours will also be held throughout. See the [policies page]({{ site.baseurl }}/2023/policies) for general information, and the [schedule page]({{ site.baseurl }}/2023/schedule) for details about content. 
+Each week will consist of two lectures, one recitation, and one computational tutorial. Office hours will also be held throughout. See the [course policies]({{ site.baseurl }}/2023/policies) for general information, and the [schedule]({{ site.baseurl }}/2023/schedule) for details about content.
 
 Unless otherwise noted, all meetings will take place in [Chen 100](https://www.caltech.edu/map/campus/tianqiao-and-chrissy-chen-neuroscience-research-building). 
 
