--- a/2023/_posts/2017-01-27-homework.md
+++ b/2023/_posts/2017-01-27-homework.md
@@ -6,23 +6,26 @@ categories: posts
 permalink: /2023/homework
 ---
 
-Before submitting your homework, take a moment to familiarize yourself with the [guidelines for homework submissions]({{ site.baseurl }}/2023/policies). **Any submission that does not completely adhere to this format will not be graded.**
+Homework sets, accompanying data, and solutions will be released here as the course progresses.
+
+Before submitting an assignment, take a moment to familiarize yourself with the [guidelines for homework submissions]({{ site.baseurl }}/2023/policies). **Any submission that does not completely adhere to them will not be graded.**
  
 ## Assignments
-**[Homework 1](http://rpdata.caltech.edu/courses/bi1_2017/homework/hw1_biogeography_Sp2017.pdf)** \| *Migrations.* (whales, wildebeest, hydrodynamics; **needs work**) Due x by 1:00 pm. [\[data set\]](http://rpdata.caltech.edu/courses/bi1_2017/data/hw1_dataset.zip) [\[solutions\]](http://rpdata.caltech.edu/courses/bi1_2017/protected/hw1_biogeography_solutions_Sp2017.pdf)
 
-**[Homework 2](http://rpdata.caltech.edu/courses/bi1_2017/homework/hw2_trophic_cascades_Sp2017.pdf)** \| *Biogeography.* (cholera and sao tome; **needs work**) Due x by 1:00pm. [\[solutions\]](http://rpdata.caltech.edu/courses/bi1_2017/protected/hw2_trophic_cascades_solutions_Sp2017.pdf) [\[jupyter notebook\]](http://rpdata.caltech.edu/courses/bi1_2017/protected/hw2_trophic_cascades_solutions_jupyter_notebook_Sp2017.html)
+**Homework 1** \| *Migrations.* Due April 13th by 1:00 pm.
 
-**[Homework 3](http://rpdata.caltech.edu/courses/bi1_2017/homework/hw3_evolution_Sp2017.pdf)** \| *Evolution.* (deep time, K-A dating, Lucy; **needs work**) Due x by 1:00pm [\[solutions\]](http://rpdata.caltech.edu/courses/bi1_2017/protected/hw3_evolution_solutions_Sp2017.pdf) [\[jupyter notebook\]](http://rpdata.caltech.edu/courses/bi1_2017/protected/hw3_evolution_solution_jupyter_notebook_Sp2017.html)
+**Homework 2** \| *Biogeography.* Due April 20th by 1:00pm.
 
-**[Homework 4](http://rpdata.caltech.edu/courses/bi1_2017/homework/hw4_pop_gen_Sp2017.pdf)** \| *Population Genetics.* (fly eyes; **needs work**) Due x by 1:00pm [\[solutions\]](http://rpdata.caltech.edu/courses/bi1_2017/protected/hw4_pop_gen_solutions_Sp2017.pdf) [\[jupyter notebook\]](http://rpdata.caltech.edu/courses/bi1_2017/protected/hw4_pop_gen_code_solutions_Sp2017.html)
+**Homework 3** \| *Evolution.* Due April 27th by 1:00pm.
 
-**[Homework 5](http://rpdata.caltech.edu/courses/bi1_2017/homework/hw5_photosynthesis_Sp2017.pdf)** \| *What is Life?* (entropy, sugar transport; **unwritten**) Due x by 1:00pm [\[solutions\]](http://rpdata.caltech.edu/courses/bi1_2017/protected/hw5_photosynthesis_solutions_Sp2017.pdf)
+**Homework 4** \| *Population Genetics.* Due May 4th by 1:00pm.
 
-**[Homework 6](http://rpdata.caltech.edu/courses/bi1_2017/homework/hw6_gene_regulation_1.pdf)** \| *Gene Expression I: Theory.* (simple repression stat-mech; done) Due x by 1:00pm [\[data set\]](http://rpdata.caltech.edu/courses/bi1_2017/data/RNAP_matrix.txt) [\[solutions\]](http://rpdata.caltech.edu/courses/bi1_2017/protected/hw6_gene_regulation_1_solutions.pdf)
+**Homework 5** \| *What is Life?* Due May 11th by 1:00pm.
 
-**[Homework 7](http://rpdata.caltech.edu/courses/bi1_2017/homework/hw7_gene_regulation_2.pdf)** \| *Gene Expression II: Experiment.* (microscopy analysis and lacZ; done) Due x by 1:00pm [\[Garcia and Phillips 2011 data file\]](http://rpdata.caltech.edu/courses/bi1_2017/data/lacZ_titration_data.csv) [\[image data set\]](http://rpdata.caltech.edu/courses/bi1_2017/data/lacI_titration.zip)
+**Homework 6** \| *Gene Expression I: Theory.* Due May 18th by 1:00pm.
 
-**[Homework 8](http://rpdata.caltech.edu/courses/bi1_2017/homework/hw8_body_plan_Sp2017.pdf)** \| *Size Control.* (**unwritten**) Due x by 1:00pm [\[images \]](http://rpdata.caltech.edu/courses/bi1_2017/data/drosophila_data.zip) [\[Gregor et al. data\]](http://rpdata.caltech.edu/courses/bi1_2017/data/gregor_data.csv)
+**Homework 7** \| *Gene Expression II: Experiment.* Due May 25th by 1:00pm.
 
-**[Homework 9]()** \| *Human Impacts.* (**unwritten**) Due x by 1:00pm.
+**Homework 8** \| *Size Control.* Due June 1st by 1:00pm.
+
+**Homework 9** \| *Human Impacts.* Due June 8th by 1:00pm.
