--- a/2023/_posts/2017-01-29-policies.md
+++ b/2023/_posts/2017-01-29-policies.md
@@ -10,15 +10,15 @@ permalink: /2023/policies
 
 Classes are held twice a week and involve a mixture of lecture and active participation, including back-of-the-envelope estimations, derivations, and natural philosophy. The course is intended to serve as an introduction to the overarching principles of modern biological inquiry, with special attention to how they relate to physics, chemistry, mathematics, engineering, and computer science.
 
-Recitations are held once a week. These sessions are led by pairs of graduate and/or undergraduate TAs, and are designed to help guide your thinking on problem sets, and further explore topics introduced in class. Feel free to attend whichever is most convenient, within room capacity limits.
+Recitations are held once a week. These sessions are led by pairs of graduate and/or undergraduate TAs, and are designed to help guide your thinking on problem sets, and further explore topics introduced in class. Feel free to attend whichever section is most convenient, within room capacity limits.
 
-Tutorials are also held once a week, hosted by the head TAs. Computational skills are increasingly important in the modern biological era; thus many homework problems will ask you to write code to perform calculations, simulations, and analyses. Since no prior programming experience is required for the course, these sessions are intended to help bring you up to speed with the week's relevant computational topics. See the [programming page]({{ site.baseurl }}/2023/programming) for details.
+[Tutorials]({{ site.baseurl }}/2023/tutorials) are also held once a week, hosted by the head TAs. These supplementary sessions are designed to be exploratory extensions of each week's content. Examples include a crash course in programming with Python and a live microbiology experiment.
 
 ## Attendance, Grading, and Electronic Devices
 
 Regular attendance is an expectation for all students in the class. As a general rule, "on time" means that you are sitting in the classroom five minutes early.
 
-There will be no exams, quizzes, reports, or research proposals; your final grade is based on homework. Homework is assigned on Thursdays and is due the following Thursday before class. **Late homework submissions (submitted after 1:00 pm on the date due) will not be accepted without penalty.** For each day an assignment is late, 10% will be deducted from the maximum possible score, beginning immediately after the deadline. For example, if your submission is handed in at 2:00 pm on the Thursday it is due, your maximum possible score is 90%. A submission received four days late will maximally earn 50%. For exceptions, see "Absences, Extensions, and Ditch Day" below.
+There will be no exams, quizzes, reports, or research proposals; your final grade is based entirely on [homework]({{ site.baseurl }}/2023/homework). Homework is assigned on Thursdays and is due the following Thursday before class. **Late homework submissions (submitted after 1:00 pm on the date due) will not be accepted without penalty.** For each day an assignment is late, 10% will be deducted from the maximum possible score, beginning immediately after the deadline. For example, if your submission is handed in at 2:00 pm on the Thursday it is due, your maximum possible score is 90%. A submission received four days late will maximally earn 50%. For exceptions, see "Absences, Extensions, and Ditch Day" below.
 
 You may use an electronic device (e.g. tablet, laptop) to take notes during class only if you use it for this purpose. We will ask you to turn off your electronic devices (or ask you to leave) if their use is off-topic or distracting to others.
 
@@ -26,7 +26,7 @@ You may use an electronic device (e.g. tablet, laptop) to take notes during clas
 
 To ensure proper grading, all homework must be submitted in adherence to the following conventions:
 - For text solutions, submit a single PDF with the filename `lastname_firstname_hw#.pdf` to Gradescope. This can be scanned handwritten work, but LaTeX is preferred. Assign the pages corresponding to each problem when you do so.
-- For code solutions, submit a Jupyter Notebook with the filename `lastname_firstname_hw#.ipynb` to [TBD]. If you write your entire assignment in a Notebook, you do not need to submit a PDF.
+- For code solutions, submit a Jupyter Notebook with the filename `lastname_firstname_hw#.ipynb` to **[TBD]**. If you write your entire assignment in a Notebook, you do not need to submit a PDF.
 
 **Any submission that does not completely adhere to these requirements will not be graded.**
 
@@ -37,7 +37,7 @@ If you are interested in challenging the way your homework was graded, you may r
 - Regrades may be used to resubmit improperly submitted assignments, but the late policy still applies.
 - Regrades are final.
 
-To request a regrade, email `bi1.caltech@gmail.com` with the subject line `[Homework #] Regrade Request for Firstname Lastname`. You may provide a description of any mistakes you feel were made in the body of the email.
+To request a regrade, email Kian with the subject line `[Homework #] Regrade Request`. You may provide a description of any mistakes you feel were made in the body of the email.
 
 <!-- use Gradescope feature except for resubmissions? or email straight to head TA? -->
 
