--- a/2023/_posts/2017-01-25-code.md
+++ b/2023/_posts/2017-01-25-code.md
@@ -15,13 +15,13 @@ Tutorials are weekly sessions hosted by the head GTAs. They are designed to supp
 Computational skills are increasingly important in modern bioscience. Thus, many homework problems will ask you to write code to perform calculations, simulations, and analyses. In turn, this allows us to get you working with real experimental data, which is typically a benefit only afforded to students in labs or higher level courses.
 
 #### Do I need prior programming experience?
-No! In fact, you will probably find tutorials more useful the less you already know. There is no CS prerequisite for this course; therefore, tutorials cover everything you need to know to succeed on the programming assignments. The goal is to introduce you to the fundamentals in a relaxed, low-pressure environment.
+No! In fact, you will probably find tutorials more useful the less you already know. There is no CS prerequisite for the course; therefore, tutorials cover everything you need to succeed on the programming assignments. The goal is to introduce you to the fundamentals in a relaxed, low-pressure environment.
 
 #### What if I already feel comfortable programming?
 If you already feel prepared to tackle the programming questions, feel free to only attend the tutorials you want/need.
 
 #### What programming language(s) can I use?
-For a combination of pedagogical and logistical reasons, all of the programming in this course is done in Python. It is also the only language we accept for homework submissions.
+For a combination of pedagogical and logistical reasons, all of the programming in the course is done in Python. It is also the only language we accept for homework submissions.
 
 #### Will tutorials always be about programming?
 Some parts of the course call for less programming than others. At these times, tutorials may instead be host to live demos and experiments that build off of themes from class. These sessions will be announced beforehand in lecture so that you don't miss them.
