extension policy, anna new pic

--- a/2023/_posts/2017-01-29-policies.md
+++ b/2023/_posts/2017-01-29-policies.md
@@ -25,8 +25,8 @@ You may use an electronic device (e.g. tablet, laptop) to take notes during clas
 ## Homework Submissions
 
 To ensure proper grading, all homework must be submitted in adherence to the following conventions:
-- For text solutions, submit a single PDF with the filename `lastname_firstname_hw#.pdf` to Gradescope. This can be scanned handwritten work, but LaTeX is preferred. Assign the pages corresponding to each problem when you do so.
-- For code solutions, submit a Jupyter Notebook with the filename `lastname_firstname_hw#.ipynb` to **[TBD]**. If you write your entire assignment in a Notebook, you do not need to submit a PDF.
+- For text solutions, submit a single PDF with the filename `lastname_firstname_hw#.pdf` to Gradescope. This can be scanned handwritten work, but LaTeX is preferred. Assign the pages corresponding to each problem using Gradescope's UI when you do so.
+- For code solutions, submit a completed Colab template notebook with the filename `lastname_firstname_hw#.ipynb` to Canvas.
 
 **Any submission that does not completely adhere to these requirements will not be graded.**
 
@@ -38,8 +38,6 @@ If you are interested in challenging the way your homework was graded, you may r
 - Regrades are final.
 
 To request a regrade, email Kian with the subject line `[Homework #] Regrade Request`. You may provide a description of any mistakes you feel were made in the body of the email.
-
-<!-- use Gradescope feature except for resubmissions? or email straight to head TA? -->
 
 ## Collaboration Policy and the Honor Code
 
@@ -70,6 +68,6 @@ In most cases, emailing your section TA is preferable to emailing a head TA, whi
 
 ## Absences, Extensions, and Ditch Day
 
-Homework extensions or absences will only be granted with an adequate reason (e.g. a note from a doctor or dean).
+Homework extensions or absences will only be granted with an adequate reason (e.g. a note from a doctor or dean), and with as much advance notice as possible. Last-minute requests (or requests after the deadline) will generally not be granted.
 
 In the event that Ditch Day falls on the day that an assignment is due, the deadline will be extended by two calendar days (i.e., if Ditch Day is on a Thursday when a problem set is due, then the revised due date will be Saturday at 1:00 pm). Any course meetings affected by Ditch Day will be rescheduled and posted on the [homepage]({{ site.baseurl }}/2023/index).
