--- a/2023/_posts/2017-01-31-overview.md
+++ b/2023/_posts/2017-01-31-overview.md
@@ -41,15 +41,15 @@ Unless otherwise noted, all meetings will take place in [Chen 100](https://www.c
 | Monday | 10:00am - 11:00am | Adele | tbd |
 | Monday | 3:00pm - 4:00pm | Katelyn | tbd |
 | Monday | 4:00pm - 5:00pm | Victor | tbd |
-| Monday | 6:00pm - 7:00pm | Rosalind | tbd |
+| Monday | 6:00pm - 7:00pm | Rosalind | Broad 156 |
 | Tuesday | 11:00am - 12:00pm | Makena | tbd |
 | Tuesday | 4:00pm - 5:00pm | Maya | tbd |
 | Tuesday | 7:00pm - 8:00pm | Matticus | tbd |
 | Wednesday | 10:00am - 11:00am | Sam | tbd |
-| Wednesday | 1:00pm - 2:00pm | Kian | tbd |
+| Wednesday | 1:00pm - 2:00pm | Kian | Chen Breezeway |
 | Wednesday | 2:00pm - 3:00pm | Gabby | tbd |
 | Wednesday | 3:00pm - 4:00pm | Anna | tbd |
-| Wednesday | 4:00pm - 5:00pm | Gabe | tbd |
+| Wednesday | 4:00pm - 5:00pm | Gabe | Chen Breezeway |
 | Wednesday | 6:00pm - 7:00pm | David | tbd |
 | Friday | 9:00am - 10:00am | Maria | tbd |
 | Friday | 3:00pm - 4:00pm | Maggie | tbd |
