--- a/2023/_posts/2017-01-25-code.md
+++ b/2023/_posts/2017-01-25-code.md
@@ -9,7 +9,7 @@ permalink: /2023/tutorials
 ## FAQs
 
 #### What are tutorials?
-Tutorials are weekly sessions hosted by the head GTAs. They are designed to supplement the rest of the course (lectures, recitations, and office hours), largely by introducing key computational skills relevant to each week's content.
+Tutorials are weekly sessions hosted by the head GTAs on Tuesday evenings from 7-9pm in [Chen 100](https://www.caltech.edu/map/campus/tianqiao-and-chrissy-chen-neuroscience-research-building). They are designed to supplement the rest of the course (lectures, recitations, and office hours), largely by introducing key computational skills relevant to each week's content.
 
 #### Why is there programming in an introductory biology course?
 Computational skills are increasingly important in modern bioscience. Thus, many homework problems will ask you to write code to perform calculations, simulations, and analyses. In turn, this allows us to get you working with real experimental data, which is typically a benefit only afforded to students in labs or higher level courses.
@@ -18,10 +18,10 @@ Computational skills are increasingly important in modern bioscience. Thus, many
 No! In fact, you will probably find tutorials more useful the less you already know. There is no CS prerequisite for the course; therefore, tutorials cover everything you need to succeed on the programming assignments. The goal is to introduce you to the fundamentals in a relaxed, low-pressure environment.
 
 #### What if I already feel comfortable programming?
-If you already feel prepared to tackle the programming questions, feel free to only attend the tutorials you want/need.
+If you already feel prepared to tackle the programming questions, feel free to only attend the tutorials you want/need. Remember that some of your classmates will never have written a single line of code before this class! We encourage you to help each other learn.
 
 #### What programming language(s) can I use?
-For a combination of pedagogical and logistical reasons, all of the programming in the course is done in Python. It is also the only language we accept for homework submissions.
+For a combination of pedagogical and logistical reasons, all of the programming in the course is done in Python using Google Colab notebooks. It is also the only language and format we accept for homework submissions.
 
 #### Will tutorials always be about programming?
 Some parts of the course call for less programming than others. At these times, tutorials may instead be host to live demos and experiments that build off of themes from class. These sessions will be announced beforehand in lecture so that you don't miss them.
@@ -31,17 +31,17 @@ Tutorials are best attended live, but we will also upload recordings and any acc
 
 ## Tutorial Schedule
 
-| Week | Topic | Links |
+| Date | Topic | Links |
 | :--: | -- | -- |
-| 1 | Intro to Python and image segmentation. | |
-| 2 | Computational sequence analysis. | |
-| 3 | Dating fossils using radioactive decay. | |
-| 4 | Exploring evolution with stochastic simulations. | |
-| 5 | Live experiment, part 1. _To be determined._ | |
-| 6 | Live experiment, part 2. _To be determined._ | |
-| 7 | Making microscopy quantitative. | |
-| 8 | _To be determined._ | |
-| 9 | _To be determined._ | |
+| Tuesday, April 11 | Intro to Python for image segmentation. | |
+| Tuesday, April 18 | Computational sequence analysis. | |
+| Tuesday, April 25 | Dating fossils using radioactive decay. | |
+| Tuesday, May 2 | Exploring evolution with stochastic simulations. | |
+| Tuesday, May 9 | tbd | |
+| Tuesday, May 16 | tbd | |
+| Tuesday, May 23 | Making microscopy quantitative. | |
+| Tuesday, May 30 | tbd | |
+| Tuesday, June 6 | tbd | |
 
 ## External Resources
 
