--- a/2023/_posts/2017-01-24-readings.md
+++ b/2023/_posts/2017-01-24-readings.md
@@ -36,3 +36,5 @@ Links to external databases and other resources that you may find helpful during
 * [The Human Impacts Database](https://anthroponumbers.org/). This website has a variety of useful numbers that will be helpful either in formulating or checking our estimates about the interactions of humans with the flora and fauna that surround us, as well as the oceans, the land, and the atmosphere.
 
 * [The BioNumbers Database](https://bionumbers.hms.harvard.edu/search.aspx). An incredibly handy collection of numbers from the molecular and cell biology literature.
+
+* [Street-Fighting Mathematics: The Art of Educated Guessing and Opportunistic Problem Solving](https://sept.mit.edu/sites/default/files/Streetfighting%20Mathematics.pdf). This excellent free book by Sanjoy Mahajan (a Caltech alum!) teaches order-of-magnitude estimation in the same style that we will employ throughout the course. Essential reading for those curious to explore more advanced techniques than those we will cover.
