--- a/2023/_posts/2017-01-25-code.md
+++ b/2023/_posts/2017-01-25-code.md
@@ -12,13 +12,13 @@ permalink: /2023/tutorials
 Tutorials are weekly sessions hosted by the head GTAs on Tuesday evenings from 7-9pm in [Chen 100](https://www.caltech.edu/map/campus/tianqiao-and-chrissy-chen-neuroscience-research-building). They are designed to supplement the rest of the course (lectures, recitations, and office hours), largely by introducing key computational skills relevant to each week's content.
 
 #### Why is there programming in an introductory biology course?
-Computational skills are increasingly important in modern bioscience. Thus, many homework problems will ask you to write code to perform calculations, simulations, and analyses. In turn, this allows us to get you working with real experimental data, which is typically a benefit only afforded to students in labs or higher level courses.
+Computational skills are increasingly important in modern bioscience. Thus, many homework problems ask you to write code to perform calculations, simulations, and analyses. In turn, this allows us to get you working with real experimental data, which is typically a benefit only afforded to students in labs or higher level courses.
 
 #### Do I need prior programming experience?
 No! In fact, you will probably find tutorials more useful the less you already know. There is no CS prerequisite for the course; therefore, tutorials cover everything you need to succeed on the programming assignments. The goal is to introduce you to the fundamentals in a relaxed, low-pressure environment.
 
 #### What if I already feel comfortable programming?
-If you already feel prepared to tackle the programming questions, feel free to only attend the tutorials you want/need. Remember that some of your classmates will never have written a single line of code before this class! We encourage you to help each other learn.
+If you already feel prepared to tackle the programming questions, feel free to only attend the tutorials you want/need. Remember that some of your classmates have never written a single line of code before this class! We encourage you to help each other learn.
 
 #### What programming language(s) can I use?
 For a combination of pedagogical and logistical reasons, all of the programming in the course is done in Python using Google Colab notebooks. It is also the only language and format we accept for homework submissions.
@@ -30,18 +30,21 @@ Some parts of the course call for less programming than others. At these times, 
 Tutorials are best attended live, but we will also upload recordings and any accompanying code notebooks below as the course progresses.
 
 ## Tutorial Schedule
+There is no live tutorial Week 1. Instead, there are two notebooks for you to read:
+- [Tutorial 0: Introduction to Colab](https://colab.research.google.com/drive/1fq_HaiuYb1L18uGcoA3eGs6taiUafR-6?usp=sharing) covers our approach to programming in this course, including instructions on how to submit your homework correctly. **This is the only tutorial you are required to read.**
+- Tutorial 0: Introduction to Python (to be added shortly).
 
-| Date | Topic | Links |
-| :--: | -- | -- |
-| Tuesday, April 11 | Intro to Python for image segmentation. | |
-| Tuesday, April 18 | Computational sequence analysis. | |
-| Tuesday, April 25 | Dating fossils using radioactive decay. | |
-| Tuesday, May 2 | Exploring evolution with stochastic simulations. | |
-| Tuesday, May 9 | tbd | |
-| Tuesday, May 16 | tbd | |
-| Tuesday, May 23 | Making microscopy quantitative. | |
-| Tuesday, May 30 | tbd | |
-| Tuesday, June 6 | tbd | |
+| Week | Date | Topic | Links |
+| :--: | -- | -- | -- |
+| 2 | Tuesday, April 11 | Intro to Python for image segmentation. | |
+| 3 | Tuesday, April 18 | Computational sequence analysis. | |
+| 4 | Tuesday, April 25 | Dating fossils using radioactive decay. | |
+| 5 | Tuesday, May 2 | Exploring evolution with stochastic simulations. | |
+| 6 | Tuesday, May 9 | tbd | |
+| 7 | Tuesday, May 16 | tbd | |
+| 8 | Tuesday, May 23 | Making microscopy quantitative. | |
+| 9 | Tuesday, May 30 | tbd | |
+| 10 | Tuesday, June 6 | tbd | |
 
 ## External Resources
 
