--- a/2023/_posts/2017-01-29-policies.md
+++ b/2023/_posts/2017-01-29-policies.md
@@ -26,7 +26,7 @@ You may use an electronic device (e.g. tablet, laptop) to take notes during clas
 
 To ensure proper grading, all homework must be submitted in adherence to the following conventions:
 - For text solutions, submit a single PDF with the filename `lastname_firstname_hw#.pdf` to Gradescope. This can be scanned handwritten work, but LaTeX is preferred. Assign the pages corresponding to each problem using Gradescope's UI when you do so.
-- For code solutions, submit a completed Colab template notebook with the filename `lastname_firstname_hw#.ipynb` to Canvas.
+- For code solutions, submit a completed Colab template notebook with the filename `lastname_firstname_hw#.ipynb` to Canvas. Details on how to work with Colab can be found on the [tutorials page]({{ site.baseurl }}/2023/tutorials).
 
 **Any submission that does not completely adhere to these requirements will not be graded.**
 
