--- a/2023/_posts/2017-01-27-homework.md
+++ b/2023/_posts/2017-01-27-homework.md
@@ -8,7 +8,7 @@ permalink: /2023/homework
 
 Homework sets, accompanying data, and solutions will be released here as the course progresses.
 
-Before submitting an assignment, take a moment to familiarize yourself with the [guidelines for homework submissions]({{ site.baseurl }}/2023/policies). **Any submission that does not completely adhere to them will not be graded.**
+Before submitting an assignment, take a moment to familiarize yourself with the [guidelines for homework submissions]({{ site.baseurl }}/2023/policies) and the [tutorial on using Google Colab](https://colab.research.google.com/drive/1fq_HaiuYb1L18uGcoA3eGs6taiUafR-6?usp=sharing). **Any submission that does not completely adhere to the guidelines will not be graded.**
  
 ## Assignments
 
