--- a/2023/_posts/2017-01-27-homework.md
+++ b/2023/_posts/2017-01-27-homework.md
@@ -12,7 +12,7 @@ Before submitting an assignment, take a moment to familiarize yourself with the 
  
 ## Assignments
 
-**Homework 1** \| *Migrations.* Due April 13th by 1:00 pm.
+**Homework 1** \| *Migrations.* Due April 13th by 1:00 pm. [[problem set](http://rpdata.caltech.edu/courses/bi1_2023/homework/hw1_migrations_PROBLEMS.pdf)] [[code template](https://colab.research.google.com/drive/1Ehk2WdWPd3pdxADoJWzATHOsOdncAW6J?usp=sharing)] [[dataset to be added shortly]]
 
 **Homework 2** \| *Biogeography.* Due April 20th by 1:00pm.
 
