--- a/2023/_posts/2017-01-31-overview.md
+++ b/2023/_posts/2017-01-31-overview.md
@@ -38,9 +38,9 @@ Unless otherwise noted, all meetings will take place in [Chen 100](https://www.c
 
 | Day | Time | TA | Location |
 | -- | -- | -- | -- |
-| Monday | 10:00am - 11:00am | Adele | tbd |
+| Monday | 10:00am - 11:00am | Adele | Chen 100 |
 | Monday | 3:00pm - 4:00pm | Katelyn | tbd |
-| Monday | 4:00pm - 5:00pm | Victor | tbd |
+| Monday | 4:00pm - 5:00pm | Victor | Hameetman Club Room 2 |
 | Monday | 6:00pm - 7:00pm | Rosalind | Broad 156 |
 | Tuesday | 11:00am - 12:00pm | Makena | tbd |
 | Tuesday | 4:00pm - 5:00pm | Maya | tbd |
