--- a/2023/_posts/2017-01-30-schedule.md
+++ b/2023/_posts/2017-01-30-schedule.md
@@ -11,7 +11,7 @@ permalink: /2023/schedule
 | Week | Date | Topic | Homework |
 | -- | -- | -- | -- |
 | 1 | Tuesday, April 4 | Where the animals go. How do we know what we know? Fear and death on the Serengeti --- the great migrations. | |
-| 1 | Thursday, April 6 | Where the animals go, part 2. The bar-tailed godwit and its 10,000 km nonstop journey. Humpback whales, from Alaska to Maui. | Homework 1 Released |
+| 1 | Thursday, April 6 | Where the animals go, part 2. The bar-tailed godwit and its 10,000 km nonstop journey. Humpback whales, from Alaska to Maui. | [Homework 1 Released]({{ site.baseurl }}/2023/homework) |
 | 2 | Tuesday, April 11 | Keystone species and trophic cascades. Robert Paine’s wonderful seastar experiment on a tiny patch of reef in the Pacific Northwest. Otters and the Aleutians. | |
 | 2 | Thursday, April 13 | The species question. The distribution of species in space and time. Island biogeography and the puzzle of amphibians on oceanic islands. | Homework 2 Released, Homework 1 Due |
 | 3 | Tuesday, April 18 | The whale. On the imperfections of the fossil record. On the perfections of the fossil record. | |
