fix tutorial policy

--- a/2023/_posts/2017-01-25-code.md
+++ b/2023/_posts/2017-01-25-code.md
@@ -27,7 +27,7 @@ For a combination of pedagogical and logistical reasons, all of the programming 
 Some parts of the course call for less programming than others. At these times, tutorials may instead be host to live demos and experiments that build off of themes from class. These sessions will be announced beforehand in lecture so that you don't miss them.
 
 #### Will tutorials be recorded?
-Tutorials are best attended live, but we will also upload recordings and any accompanying code notebooks below as the course progresses.
+Tutorials are best attended live, but we will also upload recordings below as the course progresses.
 
 ## Tutorial Schedule
 There is no live tutorial Week 1. Instead, there are two notebooks for you to read:
