--- a/2023/_posts/2017-01-31-overview.md
+++ b/2023/_posts/2017-01-31-overview.md
@@ -32,7 +32,7 @@ Unless otherwise noted, all meetings will take place in [Chen 100](https://www.c
 | Tuesday | 5:00pm - 5:55pm | Anna & Gabby |
 | Tuesday | 6:00pm - 6:55pm | Sam & Victor |
 | Wednesday | 9:00am - 9:55am | Makena & Maria |
-| Wednesday | 5:00pm - 5:55pm | David, Gabe, & Maya |
+| Wednesday | 5:00pm - 5:55pm | David & Gabe |
 
 ### Office Hours
 
@@ -43,7 +43,6 @@ Unless otherwise noted, all meetings will take place in [Chen 100](https://www.c
 | Monday | 4:00pm - 5:00pm | Victor | Hameetman Club Room 2 |
 | Monday | 6:00pm - 7:00pm | Rosalind | Chen 100 |
 | Tuesday | 11:00am - 12:00pm | Makena | Hameetman Club Room 2 |
-| Tuesday | 4:00pm - 5:00pm | Maya | tbd |
 | Wednesday | 10:00am - 11:00am | Sam | tbd |
 | Wednesday | 12:00pm - 1:00pm | Matticus | Hameetman Club Room 2 |
 | Wednesday | 1:00pm - 2:00pm | Kian | Chen Breezeway |
