--- a/2023/_posts/2017-01-25-code.md
+++ b/2023/_posts/2017-01-25-code.md
@@ -36,7 +36,7 @@ There is no live tutorial Week 1. Instead, there are two notebooks for you to re
 
 | Week | Date | Topic | Links |
 | :--: | -- | -- | -- |
-| 2 | Tuesday, April 11 | Intro to Python for image segmentation. | |
+| 2 | Tuesday, April 11 | Intro to Python for image segmentation. | [example image](https://live.staticflickr.com/1446/25978596875_df948ea1f1_b.jpg) |
 | 3 | Tuesday, April 18 | Computational sequence analysis. | |
 | 4 | Tuesday, April 25 | Dating fossils using radioactive decay. | |
 | 5 | Tuesday, May 2 | Exploring evolution with stochastic simulations. | |
