--- a/2023/_posts/2017-01-31-overview.md
+++ b/2023/_posts/2017-01-31-overview.md
@@ -49,6 +49,6 @@ Unless otherwise noted, all meetings will take place in [Chen 100](https://www.c
 | Wednesday | 2:00pm - 3:00pm | Gabby | Hameetman Conference Room |
 | Wednesday | 3:00pm - 4:00pm | Anna | Kerckhoff 101 |
 | Wednesday | 4:00pm - 5:00pm | Gabe | Chen Breezeway |
-| Wednesday | 6:00pm - 7:00pm | David | tbd |
+| Wednesday | 6:00pm - 7:00pm | David | Chen Breezeway |
 | Friday | 9:00am - 10:00am | Maria | Chen Breezeway |
 | Friday | 3:00pm - 4:00pm | Maggie | Chen Breezeway |
