--- a/2023/_posts/2017-01-25-code.md
+++ b/2023/_posts/2017-01-25-code.md
@@ -32,7 +32,7 @@ Tutorials are best attended live, but we will also upload recordings below as th
 ## Tutorial Schedule
 There is no live tutorial Week 1. Instead, there are two notebooks for you to read:
 - [Tutorial 0: Introduction to Colab](https://colab.research.google.com/drive/1fq_HaiuYb1L18uGcoA3eGs6taiUafR-6?usp=sharing) covers our approach to programming in this course, including instructions on how to submit your homework correctly. **This is the only tutorial you are required to read.**
-- Tutorial 0: Introduction to Python (to be added shortly).
+- [Tutorial 0: Introduction to Python](https://colab.research.google.com/drive/1WGEmPLcuYrGZ7IfvKAqWjRi7yTrTx6k9?usp=sharing) is a gentle, abridged introduction to the Python programming language. It's far from comprehensive, but if you're new to the subject, it pairs well with the other tutorials below.
 
 | Week | Date | Topic | Links |
 | :--: | -- | -- | -- |
